# Colorful-api

./: Cargo.toml  README.md  colorful.go  colorful_test.go  go.mod
public/: index.html
src/: main.rs  palette_generator.rs
src/palette_generator/: color_spaces.rs
