[package]
name = "Colorful-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "^4"
csv = "1.3.0"
image = { version = "0.25.1", features = ["png"] }
rand = "0.8.5"
serde_qs = { version = "0.12.0", features = ["actix4"] }
serde = { version = "1.0.203", features = ["derive"] }
hex_color = { version = "3.0.0", features = ["serde"] }
colorous = "1.0.14"
cgmath = "0.18.0"
actix-files = "0.6.6"
